--- a/python/templates/match_profile.html
+++ b/python/templates/match_profile.html
@@ -45,6 +45,13 @@
             <h5 class="card-title">Skapare av match: {{game[4]}}</h5>
             <p class="card-text">Info: {{game[3]}}</p>
             <p class="card-text">Spelarnivå: {{game[1]}}</p>
+            <div class="booked_players">
+              <img src='/static/img/user (1).png'id="spelare1" class="players">
+              <img src='/static/img/user (1).png'id="spelare2" class="players">
+              <img src='/static/img/tennis-court.png'id="court">
+              <img src='/static/img/user (2).png'id="spelare3" class="players" class="booked">
+              <img src='/static/img/user (2).png'id="spelare4" class="players" class="booked">
+            </div>  
             <a href="http://localhost:8080/show_chatt/{{game[5]}}#" class="btn btn-primary">Boka</a>
           </div>
         </div>
